--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>JERRY PRO :: 靜水流深</title>
 <meta charset="UTF-8">
 <link rel="shortcut icon" type="image/ico" href="./icon.ico"> <!--Favicon for Chrome-->
-<link rel="apple-touch-icon" href="./icon.ico"> <!--Favicon for Safari-->
+<link rel="apple-touch-icon" href="./icon.png"> <!--Favicon for Safari-->
 <script type="application/javascript" src="./JS/mJudger.js"></script>
 <link rel="stylesheet" href="./CSS/20220810.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
