--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>JERRY PRO :: 靜水流深</title>
 <meta charset="UTF-8">
 <link rel="shortcut icon" type="image/ico" href="./icon.ico"> <!--Favicon for Chrome-->
-<link rel="apple-touch-icon" href="./icon.png"> <!--Favicon for Safari-->
+<link rel="apple-touch-icon" href="./icon.ico"> <!--Favicon for Safari-->
 <script type="application/javascript" src="./JS/mJudger.js"></script>
 <link rel="stylesheet" href="./CSS/20220810.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -124,7 +124,7 @@ function closeNav() {
   <font style="line-height: 3;">目前，JERRY Tool-State以"手動"方式操作。在未來，我們將引入自動識別的功能，<s>減少我的負擔。</s></font><br/>
   <font style="line-height: 3;">不久的將來，我將會選用伺服器(如阿里雲、騰訊雲等)，提升用戶的體驗，以及開發更多的使用功能！還是那句，我正在學習！哈哈哈哈哈哈</font><br/>
 <div class="Scrolltext">
-<center><img src="./Resources/Background-removebg-preview.png" style="width: 80vw;"/></center>
+<center><img src="./Resources/Background-removebg-preview.png" style="width: 60vw;"/></center>
 </div>
 </div>
 
@@ -340,8 +340,8 @@ function showSlides(n) {
         <p class="logText2">JERRY PRO 托管至 W3Spaces</p>
       </div>
       <div>
-        <p class="logText1">2022.08.03</p>
-        <p class="logText2">JERRY PRO 備用網站托管至 Webhost</p>
+        <p class="logText1">2022.08.14</p>
+        <p class="logText2">JERRY PRO 托管至 Github 並完全開源</p>
       </div>
       <div>
         <p class="logText3">TO BE</p>
@@ -383,9 +383,9 @@ function showSlides(n) {
 </div>
 
 
-<div class="bgimg-1">
+<div class="bgimg-2">
   <div class="caption">
-  <span class="border">HAVE A NICE DAY !</span>
+  <span class="border">JERRY PRO :: Powered by JERRY, Copyright © 2022 JERRY 版權所有</span>
   </div>
 </div>
 
