--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
 <title>JERRY PRO :: 靜水流深</title>
 <meta charset="UTF-8">
-<link rel="shortcut icon" type="image/ico" href="./icon.png"> <!--Favicon for Chrome-->
-<link rel="apple-touch-icon" href="./icon.png"> <!--Favicon for Safari-->
+<link rel="shortcut icon" type="image/ico" href="./icon.ico"> <!--Favicon for Chrome-->
+<link rel="apple-touch-icon" href="./icon.ico"> <!--Favicon for Safari-->
 <script type="application/javascript" src="./JS/mJudger.js"></script>
 <link rel="stylesheet" href="./CSS/20220810.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<meta name=”viewport” content=”width=device-width, initial-scale=1.0">
 <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;500&display=swap" rel="stylesheet">
 </head>
 
@@ -45,6 +46,7 @@
     <div id="snackbar">青出於藍，而勝於藍！</div>
   </div>
 
+  
 <script>
 function DarkMode() {
    var element = document.body;
@@ -94,7 +96,7 @@ function closeNav() {
   })
 </script>
 
-<div style="color: #777;background-color:white;text-align:center;padding:50px 80px;text-align: center;" class="about" id="Goabout">
+<div style="color: #777;background-color:white;text-align:center;padding:50px 80px;" class="about" id="Goabout">
   <h3 style="text-align:center;" class="PartTitle">About</h3>
   <span class="underline1"></span>
   <div class="tagBox">
