--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 
 <body>
 <div id="Sidebar" class="sidebar">
-  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-  <a href="#Goabout" class="navLink">About</a>
-  <a href="#Goproject" class="navLink">Project</a>
-  <a href="#Golinktree" class="navLink">Link Tree</a>
-  <a href="#Gocontact" class="navLink">Contact</a>
-  <!--<a href="./myfile/mywife.html" class="navLink">🤐</a>-->
-  <a onclick="DarkMode()" class="navLink">Dark Mode🌓</a>
+   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+   <a href="#Goabout" class="navLink" onclick="closeNav()">About</a>
+   <a href="#Goproject" class="navLink" onclick="closeNav()">Project</a>
+   <a href="#Golinktree" class="navLink" onclick="closeNav()">Link Tree</a>
+   <a href="#Gocontact" class="navLink" onclick="closeNav()">Contact</a>
+   <!--<a href="./myfile/mywife.html" class="navLink">🤐</a>-->
+   <a onclick="DarkMode()" class="navLink">Dark Mode🌓</a>
 </div>
 
 
@@ -74,10 +74,15 @@ function closeNav() {
 }
 </script>
 
-    <div class="image-container">
-        <div class="text">JERRY'S <span class="Typingtext"></span></div>
-    </div>
+    <!--<div class="image-container">
+          <div class="text">JERRY'S <span class="Typingtext"></span></div>
+      </div>-->
 
+    <div id="topTitle">
+        <h1>JERRY PRO</h1>
+        <span class="underlineTop"></span><h2><span>/*</span> 這是關於JERRY的個人主頁; Hello World ! <span>*/</span></h2>
+    </div>
+							    
     <div class="container">
       <a href="#Goabout"><div class="chevron"></div>
       <div class="chevron"></div>
