--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 
 
-<div class="bgimg-1" id="bgimg-1">
+<div class="topBG" id="topBG">
 
   <div class="navbar" id="navbar">
     <img class="logo" src="icon.png" alt="logo" style="width: 50px;" />
