--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@ function DarkMode() {
   <script>
 function openNav() {
   document.getElementById("Sidebar").style.width = "250px";
-  document.getElementById("bgimg-1").style.marginLeft = "250px";
+  document.getElementById("topBG").style.marginLeft = "250px";
 }
 
 function closeNav() {
   document.getElementById("Sidebar").style.width = "0";
-  document.getElementById("bgimg-1").style.marginLeft= "0";
+  document.getElementById("topBG").style.marginLeft= "0";
 }
 </script>
 
