--- a/not-support.html
+++ b/not-support.html
@@ -12,7 +12,7 @@
 body, html {
   height: 100%;
   margin: 0;
-  font: 400 15px/1.8 "Lato", sans-serif;
+  font: 50px "Lato", sans-serif;
   color: #fff;
   scroll-behavior: smooth;
   background-image: url(./wallhaven-8x88vo_1920x1080.png);
@@ -28,24 +28,25 @@ body, html {
 #Message{
   display: inline-block; 
   text-align: center;
-  font-size: 15px;
+  font-size: 40px;
   font-weight: bolder;
   font-family: 'Courier New', Courier, monospace;
 }
 
 .Link{
     color: rgb(207, 220, 237);
+    text-align: center;
+    margin-left: 0;
+    padding-left: 0;
 }
 
 .Timejump{
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  margin: 0 auto;
-  padding: 10px;
-  width: 50%;
   text-align: center;
   position: absolute;
+  line-height: 1.2;
 }
 
 #contect{
@@ -60,6 +61,7 @@ body, html {
   margin: 0 auto;
   padding: 10px;
   width: 50%;
+  font-size: 30px;
   text-align: center;
   position: absolute;
 }
@@ -72,26 +74,21 @@ a:hover{
   color:#CFF2DD;
 }
 
-h1{
-  font-family:;
-}
+
 </style>
 
-
-
-
 <body>
-  <center><h1>ERROR</h1><center>
     <div class="Timejump">
+      <center><h1>&lt;/&gt;ERROR</h1></center>
         <div id="Message">Sorry, we are temporarily unable to support your device，You will go to </div>
-          <div class="Link" id="Message">"https://linktr.ee/myplanet_jerry"</div> 
+          <div class="Link">"https://linktr.ee/myplanet_jerry"</div> 
           <div id="Message">&nbsp;after &nbsp;</div>
           <div class="timer" id="Message"></div>
           <div id="Message">&nbsp;second</div>
     </div>
    <div class="contect">
      <div id="contect">Something wrong?</div>
-     <a href="./index.html#Gocontact"><div id="contect">&nbsp;Contact me!</div></a>
+     <a href="./jerrypro.html#Gocontact"><div id="contect">&nbsp;Contact me!</div></a>
    </div>
 
 <script>
