--- a/not-support.html
+++ b/not-support.html
@@ -92,7 +92,7 @@ a:hover{
    </div>
 
 <script>
-//按下 start 後 id 為 timer 的 DIV 內容可以開始倒數到到 0。 
+//timer開始倒數到到 0
   var timer = document.querySelector(".timer");
   var number = 10;
   setInterval(function(){
