--- a/not-support.html
+++ b/not-support.html
@@ -88,7 +88,7 @@ a:hover{
     </div>
    <div class="contect">
      <div id="contect">Something wrong?</div>
-     <a href="./jerrypro.html#Gocontact"><div id="contect">&nbsp;Contact me!</div></a>
+     <a href="./index.html#Gocontact"><div id="contect">&nbsp;Contact me!</div></a>
    </div>
 
 <script>
