--- a/myfile/download.html
+++ b/myfile/download.html
@@ -1,10 +1,10 @@
-
+<!DOCTYPE html>
 <html>
 <head>
 <title>JERRY PRO :: 靜水流深</title>
 <script type="text/javascript" src="https://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=WgM1iRWdMWUJ6vwl5W6YxXctClaxpwBaoWLRoRPimwf_p4QE3nWUQ4ojjFqovnZzQtgps1koi70ertcamizSRufMh9rE8_VXufau3KQ86qg" charset="UTF-8"></script><link rel="stylesheet" crossorigin="anonymous" href="https://gc.kis.v2.scr.kaspersky-labs.com/E3E8934C-235A-4B0E-825A-35A08381A191/abn/main.css?attr=aHR0cHM6Ly9qZXJyeXByby4wMDB3ZWJob3N0YXBwLmNvbS9teWZpbGUvZG93bmxvYWQuaHRtbA"/><meat charest="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="icon" type="image/x-icon" href="./icon.png">
+<link rel="icon" type="image/x-icon" href="../icon.png">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <script type="text/javascript" src="https://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=Qzwo0DpA-A6f02P4GmEbXwWQbiRkEDpFSVzI3GO3UbvL1e5nY3mdrEaPEzhxqQqVmwE33IRpEhHSS2lXLq17FNGCj1l3mekvgx3Ent5s6PA" charset="UTF-8"></script><link rel="stylesheet" crossorigin="anonymous" href="https://gc.kis.v2.scr.kaspersky-labs.com/E3E8934C-235A-4B0E-825A-35A08381A191/abn/main.css?attr=aHR0cHM6Ly93d3cudzNzY2hvb2xzLmNvbS9ob3d0by90cnlob3dfY3NzX3BhcmFsbGF4X2RlbW8uaHRt"/>
 </head>
