--- a/index.html
+++ b/index.html
@@ -90,25 +90,15 @@
       <span>香港</span>
       <span>二次元</span>
     </div>
-
-    <div class="aboutTyping">
-      <div class="fixedText">JERRY的<span class="TypingText"></span></div>
-    </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-  
-    <script>
-      var typed = new Typed(".TypingText", {
-        strings: ["夢想：成爲小米工程師", "日常：打code", "老婆：和泉紗霧", "學校：PLK83", "電腦：ASUS"],
-        typeSpeed: 150,
-        backSpeed: 150,
-        loop: true
-      })
-    </script>
     <div class="textContent">
-    <font style="line-height: 3;">我是JERRY：一個强迫症，懶癌晚期，二次元的宅</font><br/>
-    <font style="line-height: 3;">JERRY來自香港，目前就讀初中。Information Technology - 一切來自熱愛，在香港的電腦課程，一般只會教授簡單的電腦知識，如Scratch、App Inventor等，以“編程塊”的方式。自小的我，對網站開發十分有興趣，偶然在網上發現了W3school，自此就在“它”身上學到了不少知識。我的目標是打造一個全能的“工具箱”，為使用者提高工作效率，事半功倍。基本功，對編程尤為重要，由HTML到CSS和JavaScript的前端開發，到後端開發，我仍在學習 。</font><br/>
-    <font style="line-height: 3;">JERRY Pro是我的個人網站，介紹了我的日常以及興趣。我也藉此發布和展示我的學習成果，感謝你的一路陪伴！</font><br/>
+      <div class="aboutTyping">
+        <div class="fixedText">JERRY的<span class="TypingText"></span></div>
+        <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+        <script type="application/javascript" src="./JS/typing.js"></script>
+      </div>
+      <font style="line-height: 3;">我是JERRY：一個强迫症，懶癌晚期，二次元的宅</font><br/>
+      <font style="line-height: 3;">JERRY來自香港，目前就讀初中。Information Technology - 一切來自熱愛，在香港的電腦課程，一般只會教授簡單的電腦知識，如Scratch、App Inventor等，以“編程塊”的方式。自小的我，對網站開發十分有興趣，偶然在網上發現了W3school，自此就在“它”身上學到了不少知識。我的目標是打造一個全能的“工具箱”，為使用者提高工作效率，事半功倍。基本功，對編程尤為重要，由HTML到CSS和JavaScript的前端開發，到後端開發，我仍在學習 。</font><br/>
+      <font style="line-height: 3;">JERRY Pro是我的個人網站，介紹了我的日常以及興趣。我也藉此發布和展示我的學習成果，感謝你的一路陪伴！</font><br/>
     </div>
   <div class="Scrolltext">
   <marquee behavior="scroll" direction="left" scrollamount="20">和泉紗霧❤️</marquee><br/>
