--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
  
 <div id="Goabout"></div>
   <div class="Bg001" id="dark-01">
-    <h3 style="text-align:center;" class="PartTitle">About</h3>
+    <h3 class="PartTitle">About</h3>
     <span class="underline1"></span>
     <div class="tagBox">
       <span>科技宅</span>
@@ -111,7 +111,7 @@
   </div>
 
   <div class="Bg002" id="Goproject">
-    <h3 style="text-align:center;" class="PartTitle">Project</h3>
+    <h3 class="PartTitle">Project</h3>
     <span class="underline1"></span>
     <div class="tagBox">
       <span>JERRY Tool</span>
@@ -123,30 +123,30 @@
     <font style="line-height: 3;">不久的將來，我將會選用伺服器(如阿里雲、騰訊雲等)，提升用戶的體驗，以及開發更多的使用功能！還是那句，我正在學習！哈哈哈哈哈哈</font><br/>
     </div>
   <div class="Scrolltext">
-  <center><img src="./Resources/Background-removebg-preview.png" style="width: 60vw;"/></center>
+  <img src="./Resources/Background-removebg-preview.png" class="AboutP" alt="background"/>
   </div>
   </div>
   
 <div class="Bg001" id="dark-01">
   <div id="Golinktree">
-    <h3 style="text-align:center;" class="PartTitle">My Link Tree</h3>
+    <h3 class="PartTitle">My Link Tree</h3>
     <span class="underline1"></span>
-  <div class="Ltree">
+  <div class="LtreeAll">
     <h6 class="LinkTitle">JERRY://Website | In development</h6>
-      <a href="https://jerrytool.w3spaces.com/" class="Link">JERRY://Tool</a>
-      <a href="https://sites.google.com/view/jerrrtoolstate/home?authuser=0" class="Link">Tool://State</a>
+      <button class="Ltree"><a href="https://jerrytool.w3spaces.com/" class="Link">JERRY://Tool</a></button>
+      <button class="Ltree"><a href="https://sites.google.com/view/jerrrtoolstate/home?authuser=0" class="Link">Tool://State</a></button>
     <h6 class="LinkTitle">JERRY://Project | Fact Studio</h6>
-      <a href="https://www.youtube.com/ldzmusic_studio">LDZ Music</a>
+      <button class="Ltree"><a href="https://www.youtube.com/ldzmusic_studio">LDZ Music</a></button>
     <h6 class="LinkTitle">JERRY://Music</h6>
-      <a href="https://www.youtube.com/watch?v=kiSYRbMn67I">Click</a>
+      <button class="Ltree"><a href="https://www.youtube.com/watch?v=kiSYRbMn67I">Click</a></button>
   </div>
-  <center><img src="./1555557032155.gif" class="LTreeP" /></center>
+  <img src="./1555557032155.gif" class="LTreeP" alt="izumi sagiri//" />
   </div>
 </div>  
   
   
   <div class="Bg002" id="Gocontact">
-    <h3 style="text-align:center;" class="PartTitle">Contact</h3>
+    <h3 class="PartTitle">Contact</h3>
     <span class="underline1"></span>
 
     <div class="wrapper">
@@ -192,30 +192,30 @@
   </div>
   
   <div class="Bg001" id="Goproject">
-    <h3 style="text-align:center;" class="PartTitle">2022 雷軍年度演講(BiliBili)同步直播</h3>
+    <h3 class="PartTitle">2022 雷軍年度演講(BiliBili)同步直播</h3>
     <span class="underline1"></span>
     <!--<center><iframe style="width: 700px;height: 400px;" src="https://www.bilibili.com/blackboard/live/live-activity-player.html?cid=545342&quality=0" frameborder="no"    framespacing="0" scrolling="no" allow="autoplay; encrypted-media; muted" allowfullscreen="true"></iframe></center>--> <!--Code form Bilibili-->
   <div class="slideshow-container">
   
   <div class="mySlides fade">
     <div class="numbertext">1 / 4</div>
-    <img src="./Resources/pic20220811.png" style="width:100%">
+    <img src="./Resources/pic20220811.png" style="width:100%" alt="永遠相信美好的事情，即將發生">
   </div>
   
   <div class="mySlides fade">
     <div class="numbertext" style="color: black;">2 / 4</div>
-    <img src="./Resources/Slideshowimg/01.png" style="width:100%">
+    <img src="./Resources/Slideshowimg/01.png" style="width:100%" alt="做米粉心中，最酷的公司">
   </div>
   
   <div class="mySlides fade">
     <div class="numbertext">3 / 4</div>
-    <img src="./Resources/Slideshowimg/02.png" style="width:100%">
+    <img src="./Resources/Slideshowimg/02.png" style="width:100%" alt="永生生不息，引領未來">
   </div>
   
   
   <div class="mySlides fade">
     <div class="numbertext">4 / 4</div>
-    <img src="./Resources/Slideshowimg/03.png" style="width:100%">
+    <img src="./Resources/Slideshowimg/03.png" style="width:100%" alt="一往無前，衝破自我">
   </div>
   
   <a class="prev" onclick="plusSlides(-1)">❮</a>
@@ -331,7 +331,7 @@
   </div>-->
   
   <div style="position:relative;" class="famousCard">
-    <div style="color:black;background-color:var(--bg-w-245);text-align:center;padding:50px 80px;text-align: justify;">
+    <div class="FootCard">
     <p class="famousText">「當你的前途一片黑暗時，你該意識到是你在發光。」<a style="color:#5d7fa2;font-weight: bolder;">!</a></p>
     <p class="author">- 雷軍（小米）</p>
     </div>
