--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@
         <h2>HTTPS Error 404</h2>
         <p class="text">Opps!Something went wrong</p>
         <p class="text">We tried very hard to find it, but it still gone</p>
-        <p class="text">what can I do? Try refreshing or report the problem to us.</p>
+        <p class="text">What can I do? Try refreshing or report the problem to us.</p>
         <p class="complete text">0% complete</p>
         <div class="footer">
         <a href="https://jerryis-strong.github.io/jerrypro.github.io/"><img src="./Resources/error/error_qr.png"/></a>
