--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <link rel="shortcut icon" type="image/ico" href="./icon.png"> <!--Favicon for Chrome-->
 <link rel="apple-touch-icon" href="./icon.png"> <!--Favicon for Safari-->
 <script type="application/javascript" src="./JS/mJudger.js"></script>
+<script type="application/javascript" src="./JS/console.js"></script>
+<script type="application/javascript" src="./JS/wallpaper.js"></script>
 <link rel="stylesheet" href="./CSS/20220810.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,7 +23,7 @@
     <a href="#Golinktree" class="navLink" onclick="closeNav()">Link Tree</a>
     <a href="#Gocontact" class="navLink" onclick="closeNav()">Contact</a>
     <!--<a href="./myfile/mywife.html" class="navLink">🤐</a>-->
-    <a onclick="setTheme()" class="navLink">Dark Mode🌓</a>
+    <!--<a onclick="setTheme()" class="navLink">Dark Mode🌓</a>-->
   </div>
   
   
@@ -37,7 +39,7 @@
           <li><a href="#Golinktree" class="navLink" id="navLinkHide">Link Tree</a></li>
           <li><a href="#Gocontact" class="navLink">Contact</a></li>
           <!--<li><a href="./myfile/mywife.html" class="navLink" id="navLinkHide">🤐</a></li>-->
-          <li><a onclick="setTheme()" class="navLink">Dark Mode🌓</a></li>
+          <!--<li><a onclick="setTheme()" class="navLink">Dark Mode🌓</a></li>-->
         </ul>
       </nav>
       <button class="openbtn" onclick="openNav()">☰</button> 
@@ -257,7 +259,7 @@
       <div class="line">
         <div data-mobiletext="Quarter 4" data-index="1" class="quarter q4 y2016 dot complete"></div>
         <div data-mobiletext="August" data-timelinelabel="雷軍年度演講✅" data-index="2" class="year y2017 dot complete"></div>
-        <div data-mobiletext="Quarter 1" data-index="2" class="quarter q1 y2017 dot complete js-mobile-default"></div>		
+        
         <div data-mobiletext="Quarter 2" data-index="3" class="quarter q2 y2017 dot"></div>
         <div data-mobiletext="Quarter 3" data-index="4" class="quarter q3 y2017 dot"></div>
         <div data-mobiletext="Quarter 4" data-index="5" class="quarter q4 y2017 dot"></div>
@@ -273,9 +275,6 @@
         <div data-mobiletext="Quarter 4" data-index="13" class="quarter q4 y2019 dot"></div>
         <div data-mobiletext="NEXT" data-timelinelabel="期待..." data-index="14" class="year y2020 dot"></div>
         <div data-mobiletext="Quarter 1" data-index="14" class="quarter q1 y2020 dot"></div>
-        <div data-mobiletext="Quarter 2" data-index="15" class="quarter q2 y2020 dot"></div>
-        <div data-mobiletext="Quarter 3" data-index="16" class="quarter q3 y2020 dot"></div>
-        <div data-mobiletext="Quarter 4" data-index="17" class="quarter q4 y2020 dot"></div>
     </div>
   </section>
   <center><div class="illustrate">
@@ -310,26 +309,6 @@
   </div>
   
   
-  
-  <!--<div style="position:relative;" class="famousCard">
-    <div style="color:#ddd;background-color:var(--bg-w-245);text-align:center;padding:50px 80px;text-align: justify;margin-bottom: 10px;">
-    <p class="famousText">「相信自己，一往無前。」</p>
-    <p class="author">- 雷軍（小米）</p>
-    </div>
-  </div>
-  <div style="position:relative;" class="famousCard">
-    <div style="color:#ddd;background-color:var(--bg-w-245);text-align:center;padding:50px 80px;text-align: justify;margin-bottom: 10px;">
-    <p class="famousText">「沒有任何一個成功不冒風險，直面風險，豁出去干。」</p>
-    <p class="author">- 雷軍（小米）</p>
-    </div>
-  </div>
-  <div style="position:relative;" class="famousCard">
-    <div style="color:#ddd;background-color:var(--bg-w-245);text-align:center;padding:50px 80px;text-align: justify;margin-bottom: 10px;">
-    <p class="famousText">「成功往往不是規劃出來的，危機是你想不到的機會。」</p>
-    <p class="author">- 雷軍（小米）</p>
-    </div>
-  </div>-->
-  
   <div style="position:relative;" class="famousCard">
     <div class="FootCard">
     <p class="famousText">「當你的前途一片黑暗時，你該意識到是你在發光。」<a style="color:#5d7fa2;font-weight: bolder;">!</a></p>
@@ -345,5 +324,5 @@
   </div>
 </footer>
 
-</body>
-</html>
+  </body>
+  </html>
