--- a/404.html
+++ b/404.html
@@ -14,11 +14,11 @@
         <h2>HTTPS Error 404</h2>
         <p class="text">Opps!Something went wrong</p>
         <p class="text">We tried very hard to find it, but it still gone</p>
-        <p class="text">What can I do? Try refreshing or report the problem to us.</p>
+        <p class="text">What can I do? Make sure you entered the correct URL, and try refreshing or report the problem to us.</p>
         <p class="complete text">0% complete</p>
         <div class="footer">
         <a href="https://jerryis-strong.github.io/jerrypro.github.io/"><img src="./Resources/error/error_qr.png"/></a>
-        <p class="p">It seems that you have some small problems, you can go back to the home page to find solutions</p><br/>
+        <p class="p">It seems that you have some problems, you can go back to the home page to find solutions</p><br/>
         <p class="ep">If you call a support person, give them this info:</p><br/>
         <p class="ep">ERROR code: HTTPS ERROR 404 Not Found</p>
         </div>
