--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
        <link rel="apple-touch-icon" href="./icon.png"> <!--Favicon for Safari-->
        <script type="application/javascript" src="./JS/mJudger.js"></script>
        <link rel="stylesheet" href="./CSS/20220826_404.css">
-       <link rel="stylesheet" href="../CSS/20220826_404.css">
+       <link rel="stylesheet" href="https://jerryis-strong.github.io/jerrypro.github.io//CSS/20220826_404.css">
     </head>
 
     <body>
