--- a/404.html
+++ b/404.html
@@ -5,6 +5,8 @@
        <meta charset="UTF-8">
        <link rel="shortcut icon" type="image/ico" href="./icon.png"> <!--Favicon for Chrome-->
        <link rel="apple-touch-icon" href="./icon.png"> <!--Favicon for Safari-->
+       <link rel="shortcut icon" type="image/ico" href="https://jerryis-strong.github.io/jerrypro.github.io/icon.png"> <!--Favicon for Chrome, When out of root file-->
+       <link rel="apple-touch-icon" href="https://jerryis-strong.github.io/jerrypro.github.io/icon.png/icon.png"> <!--Favicon for Safari, When out of root file-->
        <script type="application/javascript" src="./JS/mJudger.js"></script>
        <link rel="stylesheet" href="./CSS/20220826_404.css">
        <link rel="stylesheet" href="https://jerryis-strong.github.io/jerrypro.github.io//CSS/20220826_404.css">
