--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <font>JERRY來自香港，目前就讀初中。Information Technology - 一切來自熱愛，在香港的電腦課程，一般只會教授簡單的電腦知識，如Scratch、App Inventor等，以“編程塊”的方式。自小的我，對網站開發十分有興趣，偶然在網上發現了W3school，自此就在“它”身上學到了不少知識。我的目標是打造一個全能的“工具箱”，為使用者提高工作效率，事半功倍。基本功，對編程尤為重要，由HTML到CSS和JavaScript的前端開發，到後端開發，我仍在學習 。</font><br/>
       <font>JERRY Pro是我的個人網站，介紹了我的日常以及興趣。我也藉此發布和展示我的學習成果，感謝你的一路陪伴！</font><br/>
     </div>
-    <img class="Bgimg01" src="./Resources/Bgimg/01.jpg" />
+    <img class="Bgimg01" src="./Resources/Bgimg/01.png" />
   </div>
   </div>
   </div>
@@ -122,7 +122,7 @@
     <h6 class="LinkTitle">JERRY://Music</h6>
       <button class="Ltree"><a href="https://www.youtube.com/watch?v=kiSYRbMn67I">Click</a></button>
   </div>
-  <img src="./1555557032155.gif" class="LTreeP" alt="izumi sagiri//" />
+  <img class="Bgimg01" src="./Resources/Bgimg/04.png" />
   </div>
 </div>  
   
