--- a/not-support.html
+++ b/not-support.html
@@ -15,7 +15,7 @@
         <h2>&lt;/&gt;HTTPS Error</h2>
         <div class="maintext"><p class="text">Opps!Something went wrong</p>
         <p class="text">Sorry, we are temporarily unable to support your device.</p>
-        <p class="text last">You will go to "https://linktr.ee/myplanet_jerry"</p></div>
+        <p class="text last">We will bring you to "https://linktr.ee/myplanet_jerry"</p></div>
         <p class="completetext"><a class="timer" id="Message"></a>0% complete</p>
         <div class="footer">
         <a href="https://jerryis-strong.github.io/jerrypro.github.io/"><img src="https://jerryis-strong.github.io/jerrypro.github.io/Resources/error/error_qr.png"/></a>
