--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <a href="http://jerrytool.w3spaces.com/" target="_blank"><button class="Check">Check</button></a>
 
     <h2 class="projecttag" id="projecttagse">2</h2>
-    <font><a class="highlightldz">LDZ Musicl</a> 是由我與@matthew.0112合力組成的劉大壯香港粉絲後援會，旨致力於提供高品質音樂的音樂工作室，並創造一個屬於非官方的劉大壯時代。我們相信音樂不應有任何限制，我們的努力是爲了你得到最好的體驗。</font><br/>
+    <font><a class="highlightldz">LDZ Music</a> 是由我與@matthew.0112合力組成的劉大壯香港粉絲後援會，旨致力於提供高品質音樂的音樂工作室，並創造一個屬於非官方的劉大壯時代。我們相信音樂不應有任何限制，我們的努力是爲了你得到最好的體驗。</font><br/>
     <font>我們與各大社交媒體均開設了官方賬號，發揮出我們的“愛”與力量，致力宣傳劉大壯的音樂力量。<a class="highlightldz">LDZ Music</a>在Wix與webnode分別設立了官方網站與部落格(Blog)。其中，我們在官方網站中提供了在綫音樂串流的功能，用戶能夠通過我們的官方網站過的“鎖屏聽歌”的功能。我們承諾我們所提供的服務絕對不會包含任何隱藏收費。</font><br/>
     <font><a class="highlightldz">LDZ Music</a>非常重視你的網上安全，因此，你在使用LDZ Music官方網站的旅程中，你將受到<a class="highlightldzs">“LDZ Music safer”</a>的重重保護。</font><br/>
     <a href="https://ldzmusic.wixsite.com/ldz-music" target="_blank"><button class="Check">Try Now</button></a>
