--- a/not-support.html
+++ b/not-support.html
@@ -5,8 +5,9 @@
 <meta charset="UTF-8">
 <meta http-equiv="refresh" content="10;url=https://linktr.ee/myplanet_jerry"/>
 <script type="application/javascript" src="./JS/Judger.js"></script>
-<link rel="shortcut icon" type="image/ico" href="./icon.ico"> <!--Favicon for Chrome-->
-<link rel="apple-touch-icon" href="./icon.ico"> <!--Favicon for Safari-->
+<script type="application/javascript" src="./JS/console.js"></script>
+<link rel="shortcut icon" type="image/ico" href="https://jerryis-strong.github.io/jerrypro.github.io/icon.ico"> <!--Favicon for Chrome-->
+<link rel="apple-touch-icon" href="https://jerryis-strong.github.io/jerrypro.github.io/icon.ico"> <!--Favicon for Safari-->
 <link rel="stylesheet" href="./CSS/20220902_nosupport.css">
 </head>
 
