--- a/not-support.html
+++ b/not-support.html
@@ -6,8 +6,8 @@
 <meta http-equiv="refresh" content="10;url=https://linktr.ee/myplanet_jerry"/>
 <script type="application/javascript" src="./JS/Judger.js"></script>
 <script type="application/javascript" src="./JS/console.js"></script>
-<link rel="shortcut icon" type="image/ico" href="https://jerryis-strong.github.io/jerrypro.github.io/icon.ico"> <!--Favicon for Chrome-->
-<link rel="apple-touch-icon" href="https://jerryis-strong.github.io/jerrypro.github.io/icon.ico"> <!--Favicon for Safari-->
+<link rel="shortcut icon" type="image/ico" href="./icon.png"> <!--Favicon for Chrome-->
+<link rel="apple-touch-icon" href="./icon.png"> <!--Favicon for Safari-->
 <link rel="stylesheet" href="./CSS/20220902_nosupport.css">
 </head>
 
@@ -19,14 +19,13 @@
         <p class="text last">We will bring you to "https://linktr.ee/myplanet_jerry"</p></div>
         <p class="completetext"><a class="timer" id="Message"></a>0% complete</p>
         <div class="footer">
-        <a href="https://jerryis-strong.github.io/jerrypro.github.io/"><img src="https://jerryis-strong.github.io/jerrypro.github.io/Resources/error/error_qr.png"/></a>
+        <a href="https://jerryis-strong.github.io/jerrypro.github.io/"><img src="./Resources/error/error_qr.png"/></a>
         <p class="p">It seems that you have some problems, you can go back to the home page to find solutions</p><br/>
         <p class="ep">If you call a support person, give them this info:</p><br/>
         <p class="ep">ERROR code: HTTPS ERROR Not Support</p>
         </div>
 
 <script>
-//timer開始倒數到到 0。 
   var timer = document.querySelector(".timer");
   var number = 0;
   setInterval(function(){
