--- a/ipad.html
+++ b/ipad.html
@@ -6,6 +6,7 @@
 <link rel="apple-touch-icon" href="./icon.png"> <!--Favicon for Safari-->
 <script type="application/javascript" src="./JS/console.js"></script>
 <script type="application/javascript" src="./JS/main.js"></script>
+<script type="application/javascript" src="./JS/Judgeripad.js"></script>
 <link rel="stylesheet" href="./CSS/20220810.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
