--- a/index.html
+++ b/index.html
@@ -285,6 +285,10 @@
           <p class="logText2">JERRY PRO 托管至 Github 並完全開源</p>
         </div>
         <div>
+          <p class="logText1">2022.08.14</p>
+          <p class="logText2">網站加入自適應框架</p>
+        </div>
+        <div>
           <p class="logText3">TO BE</p>
           <p class="logText3">CONTINUED...</p>
         </div>
