--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <h6 class="LinkTitle">JERRY://Project | Fact Studio</h6>
       <button class="Ltree"><a href="https://www.youtube.com/ldzmusic_studio">LDZ Music</a></button>
     <h6 class="LinkTitle">JERRY://Music</h6>
-      <button class="Ltree"><a href="https://www.youtube.com/watch?v=kiSYRbMn67I">Click</a></button>
+      <button class="Ltree"><a href="https://ngl.link/heyajerry">NGL Link</a></button>
   </div>
   <img class="Bgimg01" id="Bgimg01" src="./Resources/Bgimg/04.png" />
   </div>
