--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
       <button class="Ltree"><a href="https://sites.google.com/view/jerrrtoolstate/home?authuser=0" class="Link">Tool://State</a></button>
     <h6 class="LinkTitle">JERRY://Project | Fact Studio</h6>
       <button class="Ltree"><a href="https://www.youtube.com/ldzmusic_studio">LDZ Music</a></button>
-    <h6 class="LinkTitle">JERRY://Music</h6>
-      <button class="Ltree"><a href="https://ngl.link/heyajerry">NGL Link</a></button>
+    <h6 class="LinkTitle">JERRY://More</h6>
+      <button class="Ltree" id="ltreengl"><a href="https://ngl.link/heyajerry"><img class="ngl" src="./Resources/icon/ngl.png"/> Link</a></button>
   </div>
   <img class="Bgimg01" id="Bgimg01" src="./Resources/Bgimg/04.png" />
   </div>
@@ -297,7 +297,7 @@
   </div>
   </div>
 
-  <!--<div class="moreabout" id="moreabout">
+  <div class="moreabout" id="moreabout">
     <details>
       <summary>More About 1</summary>
       <p>Epcot is a theme park at Walt Disney World Resort featuring exciting attractions, international pavilions, award-winning fireworks and seasonal special events.</p>
@@ -307,7 +307,7 @@
       <summary>More About 2</summary>
       <p>Epcot is a theme park at Walt Disney World Resort featuring exciting attractions, international pavilions, award-winning fireworks and seasonal special events.</p>
     </details>
-  </div>-->
+  </div>
   
   <div style="position:relative;" class="famousCard">
     <div class="FootCard">
