--- a/index.html
+++ b/index.html
@@ -23,9 +23,16 @@
     <a href="#Goproject" class="navLink" onclick="closeNav()">Project</a>
     <a href="#Golinktree" class="navLink" onclick="closeNav()">Link Tree</a>
     <a href="#Gocontact" class="navLink" onclick="closeNav()">Contact</a>
+    <div id="google_translate_element"></div>
   </div>
   
-  
+  <script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement({pageLanguage: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
+}
+</script>
+
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
   
   <div class="topBG" id="topBG">
   
