--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     <h6 class="LinkTitle">JERRY://Project | Fact Studio</h6>
       <button class="Ltree"><a href="https://www.youtube.com/ldzmusic_studio">LDZ Music</a></button>
     <h6 class="LinkTitle">JERRY://More</h6>
-      <button class="Ltree" id="ltreengl"><a href="https://ngl.link/heyajerry"><img class="ngl" src="./Resources/icon/ngl.png"/> Link</a></button>
+      <button class="Ltree" id="ltreengl"><a href="https://ngl.link/heyajerry23446"><img class="ngl" src="./Resources/icon/ngl.png"/> Link</a></button>
       <button class="Ltree" id="ltreeng2" onclick="MusicOpen()"><a> Music</a></button>
       <div class="musicinfo" id="musicinfo" onclick="MusicOpen()"><div class="music-inline"><img src="./Resources/audio/cover.jpg"/><audio controls src="./Resources/audio/Leaving You.mp3" ></audio><p class="musictitle" id="musictitle">離開你以後</p></div></div>
   </div>
